# WHAM

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
data/: COLVAR_0.2  COLVAR_0.25  COLVAR_0.3  COLVAR_0.35  COLVAR_0.4  COLVAR_0.45  COLVAR_0.5
example/: COLVAR+0.0  COLVAR+0.25  COLVAR+0.5  COLVAR+1.0  COLVAR+1.25  COLVAR+1.5  COLVAR+1.75  COLVAR+2.0  COLVAR+2.25  COLVAR+2.5  COLVAR+2.75  COLVAR+3.0  COLVAR-0.25  COLVAR-0.5  COLVAR-0.75  COLVAR-1.0  COLVAR-1.25  COLVAR-1.5  COLVAR-1.75  COLVAR-1.75.xvg  COLVAR-2.0  COLVAR-2.25  COLVAR-2.5  COLVAR-2.75  COLVAR-2.75.xvg  COLVAR-3.0  COLVAR0.75  wham.out
example/1d/: COLVAR+0.25.xvg  COLVAR+1.25.xvg  COLVAR+1.75.xvg  COLVAR-2.0.xvg  COLVAR-2.25.xvg  README.txt  pullx2_1.xvg  pullx2_10.xvg  pullx2_11.xvg  pullx2_12.xvg  pullx2_13.xvg  pullx2_14.xvg  pullx2_15.xvg  pullx2_16.xvg  pullx2_17.xvg  pullx2_18.xvg  pullx2_19.xvg  pullx2_2.xvg  pullx2_20.xvg  pullx2_21.xvg  pullx2_22.xvg  pullx2_23.xvg  pullx2_24.xvg  pullx2_25.xvg  pullx2_26.xvg  pullx2_27.xvg  pullx2_28.xvg  pullx2_29.xvg  pullx2_3.xvg  pullx2_30.xvg  pullx2_31.xvg  pullx2_32.xvg  pullx2_33.xvg  pullx2_34.xvg  pullx2_4.xvg  pullx2_5.xvg  pullx2_6.xvg  pullx2_7.xvg  pullx2_8.xvg  pullx2_9.xvg  (+2 more)
example/1d_cyclic/: COLVAR+1.0.xvg  COLVAR+3.0.xvg  README.txt  wham.out  wham_bt.out  wham_uncorrelated.out
example/2d/: COLVAR+0.0+0.0  COLVAR+0.0+0.0.xvg  COLVAR+0.0+0.25  COLVAR+0.0+0.25.xvg  COLVAR+0.0+0.5  COLVAR+0.0+0.5.xvg  COLVAR+0.0+0.75  COLVAR+0.0+1.0  COLVAR+0.0+1.25  COLVAR+0.0+1.5  COLVAR+0.0+1.75  COLVAR+0.0+2.0  COLVAR+0.0+2.25  COLVAR+0.0+2.5  COLVAR+0.0+2.75  COLVAR+0.0+3.0  COLVAR+0.0-0.25  COLVAR+0.0-0.25.xvg  COLVAR+0.0-0.5  COLVAR+0.0-0.75  COLVAR+0.0-0.75.xvg  COLVAR+0.0-1.0  COLVAR+0.0-1.25  COLVAR+0.0-1.5  COLVAR+0.0-1.75  COLVAR+0.0-2.0  COLVAR+0.0-2.25  (+751 more)
src/: cli.yml  correlation_analysis.rs  error_analysis.rs  histogram.rs  io.rs  lib.rs  main.rs  statistics.rs
tests/: COLVAR_unparseable_2.xvg  cli.rs  command.rs  examples.rs  integration.rs
(+150 files in other folders)
