[package]
name = "wham"
version = "0.9.8"
authors = ["Daniel Bauer <bauer@cbs.tu-darmstadt.de>"]
description = "An implementation of the weighted histogram analysis method"
license = "GPL-3.0"
repository = "https://github.com/danijoo/WHAM"
readme = "README.md"
categories = ["science", "command-line-utilities", "molecular-dynamics", "algorithms"]
keywords = ["math", "statistics", "histogram", "bioinformatics", "molecular-dynamics"]

[dependencies]
clap = {version="2.32.0", features=['yaml']}
error-chain = "0.12.0"
rand = "0.7.*"
GSL = "1.1"
rayon = "1.0.3"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
opt-level = 3

