[package]
name = "wham"
version = "1.1.4"
authors = ["Daniel Bauer <bauer@cbs.tu-darmstadt.de>"]
description = "An implementation of the weighted histogram analysis method"
license = "GPL-3.0"
repository = "https://github.com/danijoo/WHAM"
readme = "README.md"
categories = ["science", "command-line-utilities", "algorithms"]
keywords = ["math", "statistics", "histogram", "bioinformatics", "molecular-dynamics"]
exclude = [
    "example/*"
]

[dependencies]
clap = {version="3.2.25", features=['yaml']}
error-chain = "0.12.0"
rand = "0.8.*"
rayon = "1.8.1"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
opt-level = 3

